# AutoVIN-Intelligence-System

./: .gitignore  .ruff.toml  Dockerfile.backend  README.md  docker-compose.yml
.github/workflows/: ci-cd.yml  ci.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: cli.py  main.py
backend/app/api/: routes.py  schemas.py
backend/app/api/endpoints/: vin.py
backend/app/bot/: Dockerfile.bot  bot.py
backend/app/core/: cache.py  config.py  db.py  logging.py
backend/app/ml/: dataset.py  model.py  predict.py  train.py
backend/app/mobile-app/: App.tsx  package.json
backend/app/models/: __init__.py  vin_decode.py
backend/app/services/: ai_estimator.py  auction.py  decode_service.py  ml_service.py  nhtsa.py  ocr.py  vin_local.py  vindecoder_external.py
backend/tests/: conftest.py  test_decode_vin.py  test_ml.py
frontend/: Dockerfile  index.html  package.json  tailwind.config.js
frontend/src/: styles.css
frontend/src/lib/: api.ts
frontend/src/ui/: App.tsx
