[project]
name = "autovin-intelligence-system"
version = "1.0.0"
description = "Production-ready VIN decoding platform with caching, rate limiting, and optional AI estimation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "pydantic-settings==2.6.1",
  "httpx==0.27.2",
  "sqlalchemy==2.0.36",
  "asyncpg==0.29.0",
  "alembic==1.13.3",
  "redis==5.1.1",
  "slowapi==0.1.9",
  "structlog==24.4.0",
  "python-json-logger==2.0.7",
  "orjson==3.10.11",
  "aiosqlite==0.20.0",
  "scikit-learn==1.5.2",
  "numpy==2.1.3",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "ruff==0.7.4",
  "mypy==1.13.0",
  "types-redis==4.6.0.20241004",
]

[project.scripts]
vin-decoder = "app.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
extend-ignore = ["E501"]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = false
strict_optional = true
no_implicit_optional = true
check_untyped_defs = true
exclude = ["alembic"]

[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

